--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ https://www.w3schools.com/css/css3_animations.asp
 en wat java script:
 https://www.w3schools.com/howto/howto_js_toggle_class.asp
 w3schools.com/jsref/met_document_queryselector.asp
+
+Maar de belangrijkste bron is natuurlijk Joost ;P
 */
 
 
