--- a/style.css
+++ b/style.css
@@ -14,23 +14,23 @@ Maar de belangrijkste bron is natuurlijk Joost ;P
 
 
 @font-face {
-  font-family: 'NSSans';
-  src: url('fonts/NSSans.eot');
-  src: url('fonts/NSSans.eot?#iefix') format('embedded-opentype'),
-       url('fonts/NSSans.woff2') format('woff2'), 
-       url('fonts/NSSans.woff') format('woff'), 
-       url('fonts/NSSans.ttf')  format('truetype'), 
-       url('fonts/NSSans.svg') format('svg'); 
+    font-family: 'NSSans';
+    src: url('fonts/NSSans.eot');
+    src: url('fonts/NSSans.eot?#iefix') format('embedded-opentype'),
+        url('fonts/NSSans.woff2') format('woff2'),
+        url('fonts/NSSans.woff') format('woff'),
+        url('fonts/NSSans.ttf') format('truetype'),
+        url('fonts/NSSans.svg') format('svg');
 }
 
 @font-face {
-  font-family: 'NSSans-Bold';
-  src: url('fonts/NSSans-Bold.eot');
-  src: url('fonts/NSSans-Bold.eot?#iefix') format('embedded-opentype'), 
-       url('fonts/NSSans-Bold.woff2') format('woff2'), 
-       url('fonts/NSSans-Bold.woff') format('woff'), 
-       url('fonts/NSSans-Bold.ttf')  format('truetype'),
-       url('fonts/NSSans-Bold.svg') format('svg');
+    font-family: 'NSSans-Bold';
+    src: url('fonts/NSSans-Bold.eot');
+    src: url('fonts/NSSans-Bold.eot?#iefix') format('embedded-opentype'),
+        url('fonts/NSSans-Bold.woff2') format('woff2'),
+        url('fonts/NSSans-Bold.woff') format('woff'),
+        url('fonts/NSSans-Bold.ttf') format('truetype'),
+        url('fonts/NSSans-Bold.svg') format('svg');
 }
 
 * {
@@ -127,7 +127,8 @@ main h1 {
     color: #003082;
     font-family: "NSSans-bold";
 }
-main button{
+
+main button {
     position: absolute;
     right: 0;
     top: 3.5em;
@@ -370,7 +371,7 @@ main form label:first-child {
     justify-content: space-between;
 }
 
-.footer ul li{
+.footer ul li {
     padding: .5em;
 }
 
@@ -457,16 +458,16 @@ main form label:first-child {
         grid-column-end: 4;
         margin: 0 0 -4em 0;
     }
-    
-    main button{
-    position: absolute;
-    right: 0;
-    top: 5.4em;
-    border: none;
-    font-size: 1em;
-    background-color: #ffc917;
-    padding: 0.5em 1em 0.5em 1em; 
-}
+
+    main button {
+        position: absolute;
+        right: 0;
+        top: 5.4em;
+        border: none;
+        font-size: 1em;
+        background-color: #ffc917;
+        padding: 0.5em 1em 0.5em 1em;
+    }
 
     main section {
         margin-top: 1em;
@@ -500,7 +501,6 @@ main form label:first-child {
         background-color: #ffc917;
         margin: 2em 0em 0em 1em;
         padding-top: 1em
-
     }
 
     main section article:first-child header img {
@@ -736,10 +736,10 @@ main form label:first-child {
         margin: 0 0 0 20VW;
 
     }
-    
-    main button{
-    visibility: hidden;
-}
+
+    main button {
+        visibility: hidden;
+    }
 
     main section {
         margin-top: 1em;
@@ -772,7 +772,7 @@ main form label:first-child {
         width: 50%;
         background-color: #ffc917;
         margin: 2em 0em 0em 1em;
-        
+
 
     }
 
@@ -796,7 +796,7 @@ main form label:first-child {
     main section article:first-child p {
         font-size: 0.9em;
         padding: 0;
-        margin: -5em 0em 0em 2.5em;
+        margin: -4.5em 0em 0em 2.5em;
         grid-row: 3;
         height: 90%;
         width: 80%;
@@ -858,7 +858,8 @@ main form label:first-child {
         width: 100%;
     }
 
-    .dropdown, main form {
+    .dropdown,
+    main form {
         background-color: #ffc917;
         margin: 1em 1em 0em 3em;
         width: 80%;
@@ -872,46 +873,54 @@ main form label:first-child {
         grid-template-columns: 10% 80% 10%;
     }
 
-    .dropdown input, main form input {
+    .dropdown input,
+    main form input {
         grid-column: 2;
         visibility: visible;
     }
 
-    .dropdown input[type=checkbox], main form input[type=checkbox] {
+    .dropdown input[type=checkbox],
+    main form input[type=checkbox] {
         grid-column: 1;
         visibility: visible;
     }
 
-    .dropdown input[type=input], main form input[type=input] {
+    .dropdown input[type=input],
+    main form input[type=input] {
         height: 80%;
         margin: 0 0 0 0;
         visibility: visible;
     }
 
-    .dropdown label, main form label {
+    .dropdown label,
+    main form label {
         grid-column: 2;
         margin: 0 0 -1em 0;
         visibility: visible;
     }
 
-    .dropdown p, main form p {
+    .dropdown p,
+    main form p {
         grid-column: 2;
         height: 20%;
         margin: -1.5em 0 0 0;
         visibility: visible;
     }
 
-    .dropdown label:first-child, main form label:first-child {
+    .dropdown label:first-child,
+    main form label:first-child {
         grid-column: 2;
         visibility: visible;
     }
 
-    .dropdown input[type=range], main form input[type=range] {
+    .dropdown input[type=range],
+    main form input[type=range] {
         height: 20%;
         visibility: visible;
     }
 
-    .dropdown h3, main form h3 {
+    .dropdown h3,
+    main form h3 {
         grid-column-start: 1;
         grid-column-end: 4;
         margin: -1em 0 0 0;
